# system-monitor

./: README.md
client/: pyproject.toml
client/client/: main.py
client/client/api/api_v1/: api.py
client/client/api/api_v1/endpoints/: disk_space.py  hello.py  twitter.py
client/client/api/v1/: api_v1.py
client/client/clients/: nats.py
client/client/controllers/: disk_space.py  disk_usage.py  twitter.py
client/client/core/: constants.py  log.py  settings.py
client/client/loop/: loop.py
client/client/schemas/: schema_twitter.py  schema_vitals.py
