[tool.poetry]
name = "client"
version = "0.1.0"
description = "system monitor client"
authors = ["Anurag Jha <toanuragjha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
loguru = "^0.6.0"
fastapi-utils = "^0.2.1"
nats-py = "^2.1.0"
tweepy = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
